# pincherOS

./: .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TUTORIALS.md
.github/workflows/: ci.yml  release.yml
TEMPLATES/: ONBOARDING.md  README.md
TEMPLATES/agent-bundle/: agent-config.toml
TEMPLATES/security-profile/: read-only.toml
config/: pincher.toml
docs/: ARCHITECTURE.md  COGNITIVE_REFLEXES.md  FLEET_ARCHITECTURE.md  FLEET_ORDERS.md  RISKS.md  architecture.md  contributing.md  developer-guide.md  nail-format.md  threats.md
docs/adr/: 001-sqlite-vec-over-lancedb.md
docs/agent/: CAPABILITIES.md  INTEGRATION.md  PROTOCOLS.md  QUICKSTART.md  README.md  STATE_MACHINE.md
docs/research/: DESIGN_GEMS.md  README.md  RESEARCH_STATUS.yaml  rfc-command-dynamics-mlp.md  rfc-constitutional-governance.md  rfc-jepa-integration.md  rfc-no-std-core.md  rfc-penrose-memory.md  rfc-polyformal-synthesis.md
examples/code-review/: README.md  code-review-capabilities.toml  review-pipeline.sh
examples/deploy-agent/: README.md  deploy.sh  train.sh
examples/hello-reflex/: run.sh  (+1 more)
hybrid-bridge/: API.md  Cargo.toml  EXAMPLES.md
memory/: JOURNAL.md
pincher-cli/: Cargo.toml
pincher-cli/src/: main.rs
pincher-core/: Cargo.toml
pincher-infer/: README.md  pyproject.toml
pincher-infer/pincher_infer/: __init__.py  __main__.py  config.py  distill.py  distiller.py  embed.py  embedder.py  llm.py  models.py  server.py
pincher-infer/tests/: test_distill.py
tools/: deepinfra_client.py  fleet-scout.sh  model_router.py  promote-reflex.sh  requirements.txt
(+98 files in other folders)
